<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <RelativeLayout
        android:id="@+id/layout_head"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:background="#ffffff"
        android:minHeight="@dimen/dp_44">
        <LinearLayout
            android:id="@+id/img_back"
            android:layout_width="@dimen/dp_22"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/dp_12"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="@dimen/dp_22"
                android:layout_height="@dimen/dp_22"
                android:src="@drawable/back_icon" />

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/details_send_trade"
            android:textColor="#333333"
            android:textSize="@dimen/sp_18" />

        <ImageView
            android:id="@+id/img_scan"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_16"
            android:src="@drawable/scan_gary" />

    </RelativeLayout>
    <View
        android:id="@+id/line_head"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ffe5e5e5"
        android:layout_below="@id/layout_head"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/line_head"
        android:padding="@dimen/dp_20"
        android:orientation="vertical"
        android:background="#FFFFFF"
        >
        <TextView
            android:id="@+id/tv_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_account_trade"
            android:textColor="#ff292929"
            android:textSize="@dimen/sp_14" />
        <LinearLayout
            android:id="@+id/layout_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_number"
            android:layout_marginTop="@dimen/dp_9"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@drawable/shap_gray_input"

            >
            <EditText
                android:id="@+id/et_number"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:background="@null"
                android:hint="@string/hint_address_account_trade"
                />
            <ImageView
                android:id="@+id/img_contract"
                android:layout_width="@dimen/dp_18"
                android:layout_height="@dimen/dp_18"
                 android:src="@drawable/contract_p"
                android:layout_marginRight="@dimen/dp_9"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_num_out"
            android:layout_below="@id/layout_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_out_trade"
            android:layout_marginTop="@dimen/dp_15"
            android:textColor="#ff292929"
            android:textSize="@dimen/sp_14"
            />

        <EditText
            android:id="@+id/et_num_out"
            android:layout_below="@id/tv_num_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_9"
            android:textSize="@dimen/sp_14"
            android:inputType="numberDecimal"
            android:background="@drawable/shap_gray_input"
            android:hint="@string/hint_num_out_trade"
            />
        <TextView
            android:id="@+id/tv_num_hint"
            android:layout_below="@id/et_num_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffaaaaaa"
            android:textSize="@dimen/sp_14"
            android:layout_marginTop="@dimen/dp_6"
            />

        <TextView
            android:id="@+id/tv_remark"
            android:layout_below="@id/tv_num_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remark_trade"
            android:textColor="#ff292929"
            android:textSize="@dimen/sp_14"
            android:layout_marginTop="@dimen/dp_24"
            />
        <EditText
            android:id="@+id/et_remark"
            android:layout_below="@id/tv_remark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|left"
            android:minLines="4"
            android:maxLength="30"
            android:textSize="@dimen/sp_14"
            android:hint="@string/hint_remark_trade"
            android:layout_marginTop="@dimen/dp_9"
            android:background="@drawable/shap_gray_input"
            />

        <TextView
            android:layout_below="@id/et_remark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="对方账号输入有误，请重新输入！"
            android:textColor="#fff99b47"
            android:textSize="@dimen/sp_14"
            android:visibility="invisible"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            >
            <com.netban.edc.wallet.view.widget.NoneButton
                android:id="@+id/btn_next"
                android:layout_width="@dimen/dp_68"
                android:layout_height="@dimen/dp_36"
                android:text="@string/next_btn_trade"
                android:textColor="#ffffffff"
                android:textSize="@dimen/sp_14"
                android:background="@drawable/shap_btn_login_normal"/>
            <com.netban.edc.wallet.view.widget.NoneButton
                android:id="@+id/btn_cancle"
                android:layout_width="@dimen/dp_68"
                android:layout_height="@dimen/dp_36"
                android:text="@string/cancle_btn_trade"
                android:layout_marginLeft="@dimen/dp_17"
                android:textColor="#777777"
                android:textSize="@dimen/sp_14"
                android:background="@drawable/shap_none_btn"
                />

        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>