<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="#ffffff"
        android:minHeight="?actionBarSize">

        <LinearLayout
            android:id="@+id/img_back"
            android:layout_width="@dimen/dp_22"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/dp_12"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="@dimen/dp_22"
                android:layout_height="@dimen/dp_22"
                android:src="@drawable/back_icon" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_upload_keystore"
            android:textColor="#333333"
            android:textSize="@dimen/sp_16" />
    </RelativeLayout>

    <ImageView
        android:layout_width="@dimen/dp_118"
        android:layout_height="@dimen/dp_109"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_43"
        android:src="@drawable/logo_icon"
        />
        <com.netban.edc.wallet.view.widget.NoneButton
            android:id="@+id/btn_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_64"
            android:text="@string/keystore_upload"
            android:textColor="#ffffff"
            android:textSize="@dimen/sp_16"
            android:background="@drawable/shap_btn_login_normal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/hint_keystore_upload"
            android:textColor="#ff777777"
            android:textSize="@dimen/sp_14"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/or_keystore_upload"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="@dimen/sp_14"
            />
        <com.netban.edc.wallet.view.widget.NoneButton
            android:id="@+id/btn_copy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/copy_keystore_upload"
            android:textColor="#ffffff"
            android:textSize="@dimen/sp_16"
            android:background="@drawable/shap_btn_login_normal"/>



</LinearLayout>