<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:id="@+id/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:background="#ffffff"
        android:minHeight="@dimen/dp_44">
        <LinearLayout
            android:id="@+id/img_back"
            android:layout_width="@dimen/dp_22"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/dp_12"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="@dimen/dp_22"
                android:layout_height="@dimen/dp_22"
                android:src="@drawable/back_icon" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_add_contacts" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffe5e5e5"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_contacts"
        android:textColor="#ff292929"
        android:textSize="@dimen/sp_16"
        app:layout_constraintTop_toBottomOf="@id/layout_toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        />
    <EditText
        android:id="@+id/et_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shap_gray_input"
        android:layout_marginTop="@dimen/dp_9"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:textSize="@dimen/sp_14"
        android:hint="@string/hint_account_contacts"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_account"
        />
    <TextView
        android:id="@+id/tv_remark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remark_contacts"
        android:textColor="#ff292929"
        android:textSize="@dimen/sp_16"
        app:layout_constraintTop_toBottomOf="@id/et_account"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        />

    <EditText
        android:id="@+id/et_remark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shap_gray_input"
        android:layout_marginTop="@dimen/dp_9"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:textSize="@dimen/sp_14"
        android:minLines="4"
        android:gravity="top"
        android:maxLength="30"
        android:hint="@string/hint_remark_contacts"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_remark"
        />
        <com.netban.edc.wallet.view.widget.NoneButton
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_btn_contacts"
            android:textSize="@dimen/sp_16"
            android:background="@drawable/shap_btn_login_normal"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_65"
            app:layout_constraintTop_toBottomOf="@id/et_remark"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            />
</android.support.constraint.ConstraintLayout>